syntax = "proto3";

package selector;

import "proto/condition.proto";

option go_package = "github.com/ctrlplanedev/selector-engine/pkg/pb";


message ResourceSelector {
  string id = 1;
  string workspace_id = 2;
  string entity_type = 3;
  condition.Condition condition = 4;
}

message ResourceSelectorRef {
  string id = 1;
  string workspace_id = 2;
  string entity_type = 3;
}

